--- a/VRChat/73/1030673.html
+++ b/VRChat/73/1030673.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WWIGVvH0paH3j8RG+mWLBf1sugArh38I2IDi7xNgZOA="></script>
+    "TCpSqs95FOt11/qADthBL5pTWBUFoJ6RJpnA/9xo+R0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル【ヒヨコヒドラ】","description":"VRChat向け3Dモデル【ヒヨコヒドラ】です。\nポリゴン数は18432です。\nVRchatでの使用を想定して販売していますが、ゲームや配信、商用利用等にも使えます。\n二次配布は改変したものも含め禁止です。（VRCのアバターペデスタル含む）\n\n内容\n・unitypackage(モデルデータ（FBXとPNG）とprefabデータ)\n・モデルデータ（FBX+PNG）\n\n\nIt is a 3D model for VRChat [Hiyoko Hydra].\nThe number of polygons is 18432.\nAlthough it sells it assuming use with VRchat, it can also be used for games, distribution, commercial use etc.\nSecondary distribution is prohibited, including those modified. (Including avatar pedestal of VRC)\n\nContents\n· Unitypackage (model data (FBX and PNG) and prefab data)\n· Model data (FBX + PNG)\n\n連絡先\n@jimtugy（Twitter）\n","url":"https://booth.pm/ja/items/1030673","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/472e2c7e-f67e-4208-a492-0fe806b258e0/i/1030673/65f40587-28b8-4cbb-bbde-1d5494da5c15_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WWIGVvH0paH3j8RG+mWLBf1sugArh38I2IDi7xNgZOA="></script>
+    nonce="TCpSqs95FOt11/qADthBL5pTWBUFoJ6RJpnA/9xo+R0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -414,9 +414,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
