--- a/VRChat/55/1091055.html
+++ b/VRChat/55/1091055.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IEp8iIEdSTPohHmU421y1uZ/dHB2DWYgCHy9Aq+fHoA="></script>
+    "gsML2ObXvq6j24e1jeunOl76FiAMX9HfV1P7p08hqmc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Raymarching Cube Shader (Unity/VRChat)","description":"Unity2019まで動作確認してあります。Unityのバージョン更新によって動かなくなった場合にサポートはしかねます。対応した場合は告知します。\n\nレイマーチングを使用してキューブを描画するシェーダー(Unity)です。\n12ポリゴンのキューブに適用して、高いポリゴン数のような表現が可能です。描画ピクセル数が小さいほど負荷は下がります。\n\nダイナミックボーン等と組み合わせれば、アクセサリーとしても使用可能です。（2枚めの画像は、ヨコシマ工房さまの｢VRChat向け　『ひし形カットピアス』」(https://booth.pm/ja/items/1028058)の先端に組み合わせたものです。）\n\nVRChatで使用可能です。\n詳しくは付属のREADMEをお読みください（プロパティの説明もあります）\nなにかあればTwitter: wraikny まで\n------\n2018/11/17/1:58更新(v1.1)：影の処理を追加。\n2019/1/19/7:03更新(v2.0)：色のグラデーション機能の追加と、インスペクタ拡張で見やすくしました。\n2019/1/19/8:16更新(v2.2)：グラデーションや単色時の明度の変化する方向を指定可能に。\n2019/1/19/18:49更新(v2.2.1)：軽微な不具合修正。\n2020/7/21 更新(v2.3.2): 背景色を指定可能に。キーワード削減。\n2020/11/22 v2.3.3: 軽微な修正\n2021/6/30 v2.3.4: 何らかの修正\n2021/6/30 v2.3.5: ダイナミックバッチングが行われると表示がおかしくなる不具合を修正","url":"https://booth.pm/ja/items/1091055","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/17196f09-c9fe-4c94-8cb2-5b76e97ce982/i/1091055/f3fad745-cfb0-4ecb-9d40-73822e54003c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IEp8iIEdSTPohHmU421y1uZ/dHB2DWYgCHy9Aq+fHoA="></script>
+    nonce="gsML2ObXvq6j24e1jeunOl76FiAMX9HfV1P7p08hqmc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -466,9 +466,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
