--- a/VRChat/17/1090517.html
+++ b/VRChat/17/1090517.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "HQcvY9mSHoFEYCz86jHcSPy73XWyfgdeSQhN9KJDLhA="></script>
+    "YEJZvpknRSAdGZ0ZjZpwET8tS8P+J3wZsPO2Fo55DE8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Re:Military Bot type-1","description":"2022 5/17 更にリメイクしました。\n2020 7/28　リメイク版に差し替えて再公開\n2018 12/03 VRM対応しました！\n\nVRchat向けに作成した人間サイズの軍用ロボです。\nアバターとしての利用からワールドオブジェクト、ジャンクとしてまでご自由にお使いください。\n\n\n-----------------------------------------\n利用規約\n\n当規約は随時更新させていただきますので、最新の規約の確認をお願いします。\n\n許可事項\n・VRchatでの使用\n・Unity、MMDでの使用\n・ゲーム、動画、静止画での使用\n・アバターペデスタルを介しての再配布\n・R-18、R-18Gでの使用\n・当モデルの改変\n・商用利用\n\n禁止事項\n・政治的、差別的、誹謗中のための利用\n・ゲーム、映像作品、アバターペデスタルを通さない二次配布\n・当モデルを用いてIspVitaminの名を騙ること\n\n不明な点や不具合報告などございましたら、Twitter(@IspVitamin)までご連絡お願いします。\n\n初版作成_2018月7/14\n\n","url":"https://booth.pm/ja/items/1090517","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1000","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/529ab7c8-ac9e-418b-9cf8-c509712970e1/i/1090517/ea66646a-1f15-40c4-83ec-9c2cda5b2857_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HQcvY9mSHoFEYCz86jHcSPy73XWyfgdeSQhN9KJDLhA="></script>
+    nonce="YEJZvpknRSAdGZ0ZjZpwET8tS8P+J3wZsPO2Fo55DE8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -654,9 +654,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
