--- a/VRChat/13/1089413.html
+++ b/VRChat/13/1089413.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "x+5wLVVadSFZbztJcSOxBNhCtVGoWsHx6zWzK2NNUyc="></script>
+    "dY48VTLnzX3kM+crfGgwDiLObYLqhTOFnVJHzhq0f9I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"脳内設定上撃てるタイプのガンブレード","description":"VRchat等で使用できるボクセル(MagicaVoxel)製ガンブレードです。\nポリゴン数15180です、実質アニメーションオーバーライド専用。\n使っているのを作者に見せると跳ね回ります。\n\nUnity上にインポートした後、画像三枚目のようにD\u0026Dして下さい。\n\nUnitypackageとvoxファイルを同梱していますが、voxファイルの方は分かる人向けです。(Blender上でサイズ変更をした上で結合しているため)\n\n2018/11/15 - 不備のあった箇所の修正、及び追記をしました。","url":"https://booth.pm/ja/items/1089413","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/5a9b2887-501c-43fe-ad46-c67ddd6f6125/i/1089413/b4caf2fd-53fd-45ba-a73f-355aa0a391f7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="x+5wLVVadSFZbztJcSOxBNhCtVGoWsHx6zWzK2NNUyc="></script>
+    nonce="dY48VTLnzX3kM+crfGgwDiLObYLqhTOFnVJHzhq0f9I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
