--- a/VRChat/71/1088971.html
+++ b/VRChat/71/1088971.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "W0olZlePXXUPdlCkF/O8AfC4YAdl/rzDyBcj79x/XRY="></script>
+    "lzBj5REYkjO+OCPwsWUJ3v43f3Y88JuLrzUiNDXO2os="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Reflex Shader 2.2.0","description":"Reflex Shader 2.2 リリースしました！\n基本的な色味はReflex Shader 1.0の面影を残しながら、トゥーン調の影やEmissiveScroll等の機能を追加しリッチな表現を可能にしました。2.2よりカスタムインスペクタを追加！更に使いやすくなったReflex Shaderをお楽しみください！","url":"https://booth.pm/ja/items/1088971","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/cbda31cc-ab61-4a8a-900c-882477cd9424/i/1088971/53f6d8a0-2684-4482-99b8-d467e0f15c05_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="W0olZlePXXUPdlCkF/O8AfC4YAdl/rzDyBcj79x/XRY="></script>
+    nonce="lzBj5REYkjO+OCPwsWUJ3v43f3Y88JuLrzUiNDXO2os="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -174,7 +174,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      950
+                                      948
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -190,7 +190,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      950
+                                      948
                                     </div>
                                   </div></a>
                                 </div>
@@ -683,9 +683,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
