--- a/VRChat/77/1084477.html
+++ b/VRChat/77/1084477.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "eEdSBpM2xJ17ItbPDkSs+h25NBTq8kEKft7XiRu4G10="></script>
+    "iJK7FJOVD0RJ8Ccs3gAc5HAKxUgfMZ/iVDp31VarWRY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベース","description":"ベースの3Dモデルがなかったので作りました！\nVRC用のローポリ版と様々な用途に使えるハイポリ版二種類用意しています。改変等は自由です！二次配布は禁止とさせていただきます。\n\n注意事項をreadmeに書いています。必ず目を通してください。\n\n追記、一部テクスチャを変更しています。テクスチャは各自で用意してください。","url":"https://booth.pm/ja/items/1084477","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1084477/7de3ac94-3fa9-49ae-8fd2-5581b817d429_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eEdSBpM2xJ17ItbPDkSs+h25NBTq8kEKft7XiRu4G10="></script>
+    nonce="iJK7FJOVD0RJ8Ccs3gAc5HAKxUgfMZ/iVDp31VarWRY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -372,9 +372,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
